Replace deprecated call to Call.newInstance()